// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`formatter formats an empty module 1`] = `
"module Example {
}
"
`;

exports[`formatter formats spacing after the module keyword 1`] = `
"module Example {
}
"
`;

exports[`formatter formats spacing before the module brace 1`] = `
"module Example {
}
"
`;

exports[`formatter formats excess final newlines 1`] = `
"module Example {
}
"
`;

exports[`formatter indents a variable declaration in a module 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats spacing after a type colon 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter removes spacing before a type colon 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats spacing after var 1`] = `
"module Example {
  var n: int
}
"
`;

exports[`formatter formats a constant declaration 1`] = `
"module Example {
  const N: int
}
"
`;

exports[`formatter places declarations on separate lines 1`] = `
"module Example {
  var a: int
  var b: int
}
"
`;

exports[`formatter formats a Boolean assumption 1`] = `
"module Example {
  assume Safe = true
}
"
`;

exports[`formatter formats spacing around assumption equals 1`] = `
"module Example {
  assume Safe = true
}
"
`;

exports[`formatter formats an integer value definition 1`] = `
"module Example {
  val answer = 42
}
"
`;
